--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,20 @@
-
+.item-1{
+	height:100px;
+	width:100px;
+	background-color:red;
+}
+.holder{
+	height: 100vh;
+	width:100vw;
+	 display: flex;
+  justify-content: center;
+	  flex-wrap: wrap;
+  align-content: center;
+	overflow: scroll; 
+  background-color: DodgerBlue;
+}
+.item{
+	padding:10px;
+  text-align: center;
+}
 /* Your CSS Code here. */
