--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 	 display: flex;
   justify-content: center;
 	  flex-wrap: wrap;
-  align-content: center;
+  align-items: center;
 	overflow: scroll; 
   background-color: DodgerBlue;
 }
